# muninndb-php

./: .gitignore  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  go.mod  go.sum  install.ps1  install.sh  muninn.go  types.go
.claude/: hookify.api-spec-drift.local.md  hookify.sdk-types-drift.local.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish-sdk.yml
cmd/bench/: adapters.go  main.go
cmd/diag/: main.go
cmd/muninn/: backup.go  backup_test.go  cluster.go  completion.go  coverage_hardening_test.go  coverage_test.go  exec.go  exec_test.go  help.go  init.go  init_test.go  integration_test.go  lifecycle.go  lifecycle_test.go  logs.go  logs_test.go  main.go  mcp_stdio.go  mcp_stdio_test.go  pid.go  pid_test.go  process_unix.go  process_windows.go  repl.go  repl_client.go  repl_client_test.go  server.go  server_test.go  setup_ai.go  setup_ai_test.go  status.go  status_test.go  testutil_test.go  upgrade.go  upgrade_test.go  vault.go  vault_auth.go  vault_auth_test.go
contrib/: muninndb.service
docs/: architecture.md  auth.md  capabilities.md  cluster-operations.md  cognitive-primitives.md  engram.md  entity-graph.md  feature-reference.md  hierarchical-memory.md  how-memory-works.md  iteration-log.md  plugins.md  quickstart.md  retrieval-design.md  self-hosting.md  semantic-triggers.md  vs-other-databases.md
examples/: quickstart.php
sdk/muninndb/: pyproject.toml
sdk/muninndb/muninndb/: __init__.py
src/: MuninnClient.php  SseStream.php
web/: package.json
(+337 files in other folders)
