[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "muninndb"
dynamic = ["version", "description"]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "MuninnDB", email = "hello@muninndb.com" }]
keywords = [
    "memory", "database", "langchain", "ai", "llm", "cognitive",
    "semantic-search", "embeddings", "vector-database", "agent-memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "muninn-python>=0.2.0",
]

[project.optional-dependencies]
langchain = [
    "muninn-python[langchain]>=0.2.0",
]

[project.urls]
Homepage = "https://muninndb.com"
Repository = "https://github.com/scrypster/muninndb"
Documentation = "https://github.com/scrypster/muninndb/blob/main/sdk/python/README.md"
"Bug Tracker" = "https://github.com/scrypster/muninndb/issues"
